--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "set PORT=3006 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -25,7 +25,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://server:3000",
+  "proxy": "http://server:8080",
   "browserslist": {
     "production": [
       ">0.2%",
